# jarvis-cli

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  actions.example.yaml  pyproject.toml
jarvis/: __init__.py  actions.py  brain.py  cli.py  config.py  personality.py  ui.py  voice.py
